# webstarter

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: usage.md
tests/: test_logic.py
webstarter/: __init__.py  cli.py  generator.py  structure.py  templates.py
webstarter/commands/: add.py  create.py  init.py
webstarter/core/: __init__.py  exceptions.py  generator.py  logger.py  project_builder.py  validator.py
webstarter/templates/base/: index.html
webstarter/templates/base/css/: style.css
webstarter/templates/base/js/: main.js
webstarter/templates/bootstrap/: cdn.html
webstarter/templates/components/: navbar.html
webstarter/templates/dark/: dark-theme.css
webstarter/templates/multipage/: about.html  router.js
webstarter/utils/: copier.py  file_manager.py
